# CE-GY-7893-Engineering-Applications-of-Deep-Learning-Homeworks

./: .gitignore  README.md  pyproject.toml
Data/Homework-1/: README.md  generate_regression_data.py
Solutions/: Solution-1.ipynb  Solution-1.py  Solution-2.ipynb
homeworks/: Homework-1.ipynb  Homework-1.py  Homework-2.ipynb
